# rustdoc-json-types

./: .gitignore  Cargo.toml  LICENSE  README.md  build.config.ts  build.rs  package.json  renovate.json
.github/workflows/: ci.yml  release.yml  update-bindings.yml
bindings/: Abi.ts  AssocItemConstraint.ts  AssocItemConstraintKind.ts  Attribute.ts  AttributeRepr.ts  Constant.ts  Crate.ts  Deprecation.ts  Discriminant.ts  DynTrait.ts  Enum.ts  ExternalCrate.ts  FnDecl.ts  Function.ts  FunctionHeader.ts  FunctionPointer.ts  FunctionSignature.ts  GenericArg.ts  GenericArgs.ts  GenericBound.ts  GenericParamDef.ts  GenericParamDefKind.ts  Generics.ts  Header.ts  Id.ts  Impl.ts  Import.ts  Item.ts  ItemEnum.ts  ItemKind.ts  ItemSummary.ts  MacroKind.ts  Module.ts  OpaqueTy.ts  Path.ts  PolyTrait.ts  PreciseCapturingArg.ts  Primitive.ts  ProcMacro.ts  ReprKind.ts  (+23 more)
src/: lib.rs
