[package]
name = "rustdoc_json_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
ts-rs = { version = "7.1.1", features = ["serde-compat"] }

[build-dependencies]
reqwest = { version = "0.12.2", features = ["blocking"] }
