[package]
name = "rustdoc_json_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
ts-rs = { version = "10.1.0", features = ["serde-compat"] }

[build-dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["blocking"] }
